--- a/style.css
+++ b/style.css
@@ -51,5 +51,9 @@ i {
 }
 
 .additionalInputs {
-   margin-left: 1px !important; 
+    margin-left: 1px !important;
+}
+
+#header_bg {
+    margin-bottom: 10px;
 }
